fix: use List.get(0) for Java 17 compatibility in DeviceTest
Replace getFirst() (Java 21+) so the test suite compiles on the project's Java 17 target.